tests/baselines/reference/paramPropertiesInSignatures.errors.txt
==== tests/cases/compiler/paramPropertiesInSignatures.ts (5 errors) ====
    class C1 {
        constructor(public p1:string); // ERROR
                 ~~~~~~
!!! paramPropertiesInSignatures.ts(2,14): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! paramPropertiesInSignatures.ts(3,14): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(public p3:any) {} // OK
    }
    
    declare class C2 {
        constructor(public p1:string); // ERROR
                 ~~~~~~
!!! paramPropertiesInSignatures.ts(8,14): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! paramPropertiesInSignatures.ts(9,14): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(public p3:any); // ERROR
                 ~~~~~~
!!! paramPropertiesInSignatures.ts(10,14): error TS1040: A parameter property is only allowed in a constructor implementation.
    }